# mistral-mergeguard-prep

./: AGENT_CONFIGS.md  AGENT_PROMPTS.md  API_NOTES.md  ARCHITECTURE.md  DEMO_PR.md  DEMO_PR_PLAN.md  FRONTEND_PLAN.md  HACKATHON_SPRINT_PLAN.md  README.md  SCHEMAS.md  SPRINT_PLAN.md  pyproject.toml
.github/workflows/: ci.yml
agents/: planner.md  reporter.md  reviewer.md  verifier.md
docs/: architecture.md
src/mergeguard/: __init__.py  agents.py  config.py  github_client.py  handoffs.py  main.py  prompts.py  schemas.py  tool_impl.py  tools.py
src/mergeguard/prompts/: __init__.py  planner.md  reporter.md
