[project]
name = "mergeguard"
version = "0.1.0"
description = "Multi-agent code review pipeline using Mistral Agents API"
requires-python = ">=3.11"
dependencies = [
    "mistralai>=1.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mergeguard = "mergeguard.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mergeguard"]

[tool.hatch.build.targets.wheel.force-include]
"src/mergeguard/prompts" = "mergeguard/prompts"
